# nostos-candle

./: .gitignore  Cargo.toml  candle.nos  main.nos  nostos.toml  test_candle.nos  test_candle_wrapper.nos
docs/: API.md
examples/: 01_basics.nos  02_arithmetic.nos  03_activations.nos  04_reductions.nos  05_shape_ops.nos  06_simple_nn.nos  07_new_ops.nos  08_transformer_blocks.nos  09_model_loading.nos  10_bert_encoder.nos  11_complete_bert.nos  12_bert_pretrained.nos  13_modernbert.nos  14_modernbert_refactored.nos  15_models.nos  lstm_attention_weights.safetensors  lstm_dropout_attention.nos  mnist_prepare.py  test_attention_backprop.nos  test_bert.nos  test_candle_simple.nos  test_dropout.nos  test_lstm_attention.nos  test_training.nos  test_trait_scope.nos  test_traits.nos  test_type_inference_bug.nos  test_type_inference_fail.nos  train_lstm.nos  train_lstm.py  train_mnist.nos  train_mnist.py  verify_bert.py  verify_lstm_attention.py  verify_modernbert.py
src/: commands.rs  error.rs  handles.rs  lib.rs  model.rs  worker.rs
src/ops/: binary.rs  creation.rs  mod.rs  reduction.rs  shape.rs  unary.rs
tests/: integration_tests.rs
tutorial/: mnist.md  prepare_mnist.py  train_mnist.nos  train_mnist.py  train_mnist_cnn.nos
verification/: BERT_VERIFICATION.md  MODERNBERT_VERIFICATION.md
