[package]
name = "nostos-candle"
version = "0.1.0"
edition = "2021"
description = "Candle ML bindings for Nostos - handle-based FFI with GPU context isolation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1.19"
thiserror = "1.0"
log = "0.4"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
