[package]
name = "nostos-candle"
version = "0.1.0"
edition = "2021"
description = "Candle ML extension for Nostos"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
nostos-extension = { git = "https://github.com/pegesund/nostos", branch = "master" }
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
